todo-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
      - name: todo-app-volume
        persistentVolumeClaim:
          claimName: todo-app-claim
      containers:
        - name: todo-app-server
          image: adamfarhadi/dwk-todo-app-server:1.12
          imagePullPolicy: Always
          volumeMounts:
          - name: todo-app-volume
            mountPath: /usr/src/app/files
        - name: todo-app-writer
          image: adamfarhadi/dwk-todo-app-writer:1.12
          imagePullPolicy: Always
          volumeMounts:
          - name: todo-app-volume
            mountPath: /usr/src/app/files
