todo-app/manifests/todo-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-dep
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
      - name: todo-app-volume
        persistentVolumeClaim:
          claimName: todo-app-pvc
      containers:
        - name: todo-app
          image: todo-app
          imagePullPolicy: Always
          volumeMounts:
          - name: todo-app-volume
            mountPath: /usr/src/app/files
