todo-app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-svc
spec:
  type: NodePort
  selector:
    app: todo-app
  ports:
  - name: http
    nodePort: 30080
    protocol: TCP
    port: 3002
    targetPort: 3001
