todo-app/manifests/todo-app-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-backend-svc
spec:
  type: ClusterIP
  selector:
    app: todo-app-backend
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
