todo-app/manifests/todo-app-postgres-db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: todo-app-postgres-stset
spec:
  serviceName: todo-app-postgres-svc
  replicas: 1
  selector:
    matchLabels:
      app: todo-app-postgres-app
  template:
    metadata:
      labels:
        app: todo-app-postgres-app
    spec:
      containers:
      - name: todo-app-postgres-db
        image: postgres:18
        ports:
        - containerPort: 5432
          name: web
        volumeMounts:
        - name: todo-app-postgres-data-storage
          mountPath: /var/lib/postgresql/18/docker
          subPath: postgres
        - name: postgres-todo-app-initdb
          mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: postgres-todo-app-initdb
          configMap:
            name: postgres-todo-app-initdb-config
  volumeClaimTemplates:
  - metadata:
      name: todo-app-postgres-data-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 200Mi
---
apiVersion: v1
kind: Service
metadata:
  name: todo-app-postgres-svc
spec:
  ports:
  - port: 5432
    name: web
  clusterIP: None
  selector:
    app: todo-app-postgres-app
