todo-app/manifests/todo-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-svc
spec:
  type: NodePort
  selector:
    app: todo-app
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3001
